# redbot

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Makefile.i18n  Makefile.pyproject  Makefile.venv  README  README.md  README.rst  TRANSLATION.md  config.txt  css_test.py  index.html  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.antigravity/: rules.md
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  publish.yml  test.yml
cli/: red
extra/: README.md  config-docker.txt  redbot-gc.service  redbot-gc.timer  redbot-sysusers.conf  redbot.service
lib/: cache_check.py  defns.py  droid.py  fetch.py  http_syntax.py  link_parse.py  response_analyse.py  speak.py  state.py  subreq.py  uri_validate.py
lib/formatter/: __init__.py  har.py  html.py  html_header.py  text.py  unicorn.py
lib/headers/: __init__.py  accept_ranges.py  age.py  allow.py  cache_control.py  content_base.py  content_disposition.py  content_encoding.py  content_length.py  content_md5.py  content_range.py  content_transfer_encoding.py  content_type.py  date.py  etag.py  expires.py  keep_alive.py  last_modified.py  link.py  location.py  mime_version.py  p3p.py  pragma.py  retry_after.py  server.py  set_cookie.py  soapaction.py  tcn.py  transfer_encoding.py  vary.py  via.py  warning.py  x_cache.py  x_content_type_options.py  x_download_options.py  x_frame_options.py  x_meta_mssmarttagspreventparsing.py  x_pingback.py  x_ua_compatible.py  x_xrds_location.py  (+1 more)
lib/subrequest/: base.py  conneg.py  etag_validate.py  lm_validate.py  range.py
redbot/: __init__.py  cache_check.py  cache_file.py  cli.py  daemon.py  defns.py  droid.py  fetch.py  gc.py  http_syntax.py  i18n.py  link_parse.py  message.py  note.py  ratelimit.py  speak.py  state.py  status_check.py  type.py  uri_validate.py  utils.py  webbotauth.py  webui.py
redbot/assets/: prettify.js  prettify.js.map  red_style.css  red_style.css.map  script.js  script.js.brotli  script.js.gzip  script.js.map  style.css  style.css.brotli  style.css.gzip
redbot/assets/icon/: README-ICONS
redbot/checks/: cache.py
redbot/formatter/: __init__.py  har.py  html.py  html_base.py  html_header.py  null_links.py  rst.py  slack.py  text.py
redbot/formatter/templates/: footer.html  response_finish.html  response_multi_finish.html  response_start.html
redbot/headers/: README.md  __init__.py  accept_ranges.py  age.py  allow.py  cache_control.py  content_base.py  content_disposition.py  content_encoding.py  content_length.py  content_md5.py  content_range.py  content_transfer_encoding.py  content_type.py  date.py  etag.py  expires.py  keep_alive.py  last_modified.py  link.py  location.py  mime_version.py  p3p.py  pragma.py  retry_after.py  server.py  set_cookie.py  set_cookie2.py  soapaction.py  tcn.py  transfer_encoding.py  vary.py  via.py  warning.py  x_cache.py  x_content_type_options.py  x_download_options.py  x_frame_options.py  x_meta_mssmarttagspreventparsing.py  x_pingback.py  (+3 more)
redbot/message/: __init__.py  cache.py  http_syntax.py  link_parse.py  status.py  test_message.py  uri_syntax.py
redbot/message/headers/: README.md  __init__.py  _coverage.py  _decorators.py  _header.tpl  _notes.py  _utils.py  accept_ranges.py  age.py  allow.py  cache_control.py  connection.py  connectiox.py  content_base.py  content_disposition.py  content_encoding.py  content_language.py  content_length.py  content_location.py  content_md5.py  content_range.py  content_transfer_encoding.py  content_type.py  cteonnt_length.py  date.py  etag.py  expires.py  keep_alive.py  last_modified.py  link.py  location.py  mime_version.py  p3p.py  pragma.py  (+26 more)
redbot/message_check/: cache.py  status.py
redbot/resource/: __init__.py  fetch.py  link_parse.py  robot_fetch.py
redbot/subrequest/: __init__.py  base.py  conneg.py  etag_validate.py  lm_validate.py  range.py
redbot/syntax/: __init__.py  pylintrc  rfc3986.py  rfc5234.py  rfc5322.py  rfc5646.py  rfc5987.py  rfc5988.py  rfc7230.py  rfc7231.py  rfc7232.py  rfc7233.py  rfc7234.py  rfc7235.py
redbot/translations/: extra_strings.py  messages.pot
redbot/util/: linux.py  python.py
redbot/webui/: __init__.py  captcha.py  links.py  ratelimit.py  robot_check.py  saved_tests.py  slack.py
scripts/: redbot  webui.py
share/: Makefile  jquery.base64.js  jquery.hoverIntent.js  red_popup.js  red_req_headers.js  red_script.js  red_style.css  red_style.css.map  script.js  script.js.map  style.css
share/scss/: red_style.scss
src/: droid.py  fetch.py  http_client.py  link_parse.py  package-lock.json  package.json  push_tcp.py  red.py  red_defns.py  red_fetcher.py  red_header.py  red_popup.js  red_req_headers.js  red_script.js  red_speak.py  red_style.css  redbot.idraw  response_analyse.py  uri_validate.py  webui.py
src/formatter/: __init__.py  har.py  html.py  html_header.py  text.py
src/js/: _red_script.js  red_request.js  red_response.js  red_response_multi.js  red_script.js  red_util.js  webpack.config.js
src/scss/: red_fonts.scss  red_help.scss  red_layout.scss  red_message.scss  red_mixins.scss  red_notes.scss  red_popup.scss  red_request.scss  red_response.scss  red_response_multi.scss  red_style.scss  red_summary.scss  red_vars.scss
test/: Makefile  common.py  coverage.py  header_coverage.py  mypy.ini  note_coverage.py  pylintrc  run_redbot.py  server.py  test_daemon.py  test_headers.py  test_i18n.py  test_link_parse.py  test_response_analyse.py  test_ua.py  test_webbotauth.py  test_webui.py  unit_tests.py  utils.py
test/deploy/: .gitignore  .htaccess  Makefile  ascii_with_complaints.py  sitecustomize.py
test/registries/: message-headers.xml
tools/i18n/: TRANSLATION.md  autotranslate.py  babel.cfg  check.py  extractors.py  utils.py
unicorn/: README.rst  redirect_template.html  unicorn_ui.py
util/: parse_rfc_headers.py
web/: Makefile  red_style.css  script.js  style.css
(+56 files in other folders)
