[project]
name = "redbot"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "REDbot is lint for HTTP."
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "httplint >= 2025.12.6",
    "importlib_resources",
    "Jinja2 >= 3.1.2",
    "markdown >= 3.4.4",
    "MarkupSafe >= 2.1.3",
    "netaddr >= 1.2.1",
    "thor >= 0.11.13",
    "typing-extensions >= 4.8.0",
    "Babel >= 2.14.0",
]

[project.urls]
homepage = "https://redbot.org/project/"

[project.optional-dependencies]
systemd = ["cysystemd"]
dev = ["mypy", "black", "pylint", "pytest", "pytest-md", "validate-pyproject", "build",
    "playwright", "types-Markdown", "llm", "llm-gemini", "j2lint"]

[project.scripts]
redbot = "redbot.cli:main"
redbot_daemon = "redbot.daemon:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "redbot.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.mypy]
follow_imports = "normal"
incremental = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true

[tool.pylint.basic]
function-rgx = "[a-z_][a-z0-9_]{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
attr-rgx = "[a-z_][a-z0-9_]{1,30}$"
argument-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,30}|(__.*__))$"
method-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-rgx = "[a-zA-Z0-9_]+$"

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116,W0613,R0903"

[tool.pylint.reports]
reports = false

[tool.pylint.variables]
dummy-variables-rgx = "response_start|response_body|response_done|error|formatter_done|check_done|_"

[tool.pylint.design]
max-args=10
max-positional-arguments=10
max-locals=35
max-branches=25
max-statements=100
max-attributes=40
min-public-methods=1

[tool.pylint.similarities]
min-similarity-lines = 10
