[project]
name = "redbot"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "REDbot is lint for HTTP."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Operating System :: MacOS :: MacOS X",
]
license-files = ["LICENSE.md"]
dependencies = [
    "cryptography >= 42.0.0",
    "http-sf >= 1.0",
    "httplint >= 2026.05.01",
    "importlib_resources",
    "Jinja2 >= 3.1.2",
    "markdown >= 3.4.4",
    "MarkupSafe >= 2.1.3",
    "netaddr >= 1.2.1",
    "thor >= 0.15.1",
    "typing-extensions >= 4.8.0",
]

[project.urls]
homepage = "https://redbot.org/project/"

[project.optional-dependencies]
systemd = ["cysystemd"]
dev = ["mypy",
       "black",
       "isort",
       "pylint",
       "pytest",
       "pytest-md",
       "validate-pyproject",
       "build",
       "playwright",
       "types-Markdown",
       "j2lint",
]
i18n = ["Babel >= 2.14.0",
        "llm",
        "llm-mlx",
]

[project.scripts]
redbot = "redbot.cli:main"
redbot_daemon = "redbot.daemon:main"
redbot_gc = "redbot.gc:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "redbot.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["redbot", "redbot.*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
