[metadata]
name = redbot
version = attr: redbot.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = REDbot is lint for HTTP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://redbot.org/project/
project_urls =
    Bug Tracker = https://github.com/mnot/redbot/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Testing
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    License :: OSI Approved :: MIT License

[options]
package_dir =
    redbot = redbot
packages = find:
python_requires = >=3.7
scripts =
    bin/redbot_cli
    bin/redbot_daemon.py
    bin/redbot_cgi.py
install_requires =
    thor >= 0.9.5
    markdown >= 2.6.5
    netaddr >= 0.7.19
    Jinja2 >= 2.11.1
    typing-extensions >= 4.3.0
    MarkupSafe

[options.extras_require]
systemd = csystemd
dev = mypy; playwright; black; pytest; pytest-md

[options.package_data]
redbot = assets/*.css, assets/*.js, assets/*.map, assets/webfonts/*, assets/logo/*, formatter/templates/*


